Fix: hero for better readability

--- a/p3-react-app/src/pages/HomePage.css
+++ b/p3-react-app/src/pages/HomePage.css
@@ -11,7 +11,11 @@
 
 .hero-description {
   width: 60%;
-  padding-top: 100px;
+  margin-top: 100px;
+  margin-bottom: 320px;
+  padding: 20px;
+
+  background-color:rgba(62, 61, 61, 0.7);
 }
 
 .hero h2 {
@@ -23,7 +27,7 @@
 }
 
 .hero-button {
-  padding: 80px 0;  
+  padding-top: 80px;  
 }
 
 .start-button, .add-button{
